--- a/remote_host/Dockerfile
+++ b/remote_host/Dockerfile
@@ -1,5 +1,33 @@
 FROM ubuntu:latest
 
+# SSH install
+# https://hub.docker.com/r/picoded/ubuntu-openjdk-8-jdk/dockerfile/
+RUN apt-get update && apt-get install -y openssh-server
+
+RUN useradd remote_user && \
+    echo "remote_user:1234" | chpasswd && \
+    mkdir /home/remote_user/.ssh -p && \
+    chmod 700 /home/remote_user/.ssh && \
+    mkdir -p -m0755 /var/run/sshd
+
+RUN chown remote_user:remote_user   -R /home/remote_user
+
+# This is in accordance to : https://www.digitalocean.com/community/tutorials/how-to-install-java-with-apt-get-on-ubuntu-16-04
+RUN apt-get install -y openjdk-8-jdk && \
+	apt-get install -y ant && \
+	apt-get clean && \
+	rm -rf /var/lib/apt/lists/* && \
+	rm -rf /var/cache/oracle-jdk8-installer;
+	
+# Fix certificate issues, found as of 
+# https://bugs.launchpad.net/ubuntu/+source/ca-certificates-java/+bug/983302
+RUN apt-get update && \
+	apt-get install -y ca-certificates-java && \
+	apt-get clean && \
+	update-ca-certificates -f && \
+	rm -rf /var/lib/apt/lists/* && \
+	rm -rf /var/cache/oracle-jdk8-installer;
+
 # Docker-cli install
 RUN apt-get update
 RUN apt-get install -y apt-transport-https \
@@ -14,16 +42,5 @@ RUN echo \
     $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
 RUN apt-get update && \
     apt-get install -y docker-ce-cli
-
-# SSH install
-RUN apt-get install -y openssh-server
-
-RUN useradd remote_user && \
-    echo "remote_user:1234" | chpasswd && \
-    mkdir /home/remote_user/.ssh -p && \
-    chmod 700 /home/remote_user/.ssh && \
-    mkdir -p -m0755 /var/run/sshd
-
-RUN chown remote_user:remote_user   -R /home/remote_user
 
 CMD /usr/sbin/sshd -D
