--- a/remote_client/Dockerfile
+++ b/remote_client/Dockerfile
@@ -38,6 +38,8 @@ RUN apt-get install python3-pip -y
 RUN pip3 install selenium
 RUN pip3 install -U pytest
 
-RUN chmod 777 /home/remote_user
+RUN mkdir /home/remote_user/selenium
+RUN chmod 777 /home/remote_user/selenium
+RUN chown remote_user:remote_user -R /home/remote_user/selenium
 
 CMD /usr/sbin/sshd -D
